--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <li><a href="#project"><i class="fa fa-list"></i> Project</a></li>
                 <li><a href="#achievement"><i class="fa fa-trophy"></i> Achievement</a></li>
                 <li><a href="#contact" id="about_me"><i class="fa fa-comment"></i> Contact</a></li>
-                <li><a href="./Document/MagicalCV__1_.pdf" target="blank" class="resume"><i
-                            class="fa fa-file"></i> Resume</a></li>
+<!--                 <li><a href="./Document/MagicalCV__1_.pdf" target="blank" class="resume"><i
+                            class="fa fa-file"></i> Resume</a></li> -->
             </ul>
         </div>
         <!-- Main Content -->
