--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="navbar">
             <!-- Navbar -->
             <div class="logo">
-                <a href="#">Khushroff<span>.tech</span></a>
+                <a href="#">Khushi<span>.tech</span></a>
             </div>
             <div class="nav_toggle">
                 <span></span>
@@ -254,6 +254,36 @@
                                 <div class="icon">
                                     <i class="fa fa-mobile-alt"></i>
                                 </div>
+                                <h4><a href="https://communicore.netlify.app/" target="blank">CommuniCore</a></h4>
+                                <p>A Website made for electronics students in which all resources are present related to higher studies, top courses on youtube and internship opportunities.</p>
+                                <p>Github: <a href="https://github.com/Ks103/CommuniCore" target="_blank">Communicore</a></p>
+                            </div>
+                        </div>
+                        <div class="project-item padd_side_15">
+                            <div class="project-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-mobile-alt"></i>
+                                </div>
+                                <h4><a href="https://incubein.in/" target="blank">Incubein</a></h4>
+                                <p>This is the government website made for Incubein foundation company.</p>
+                                <!-- <p>Github: <a href="https://github.com/Ks103/voice-chatbot" target="_blank">Incubein</a></p> -->
+                            </div>
+                        </div>
+                        <div class="project-item padd_side_15">
+                            <div class="project-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-mobile-alt"></i>
+                                </div>
+                                <h4><a href="https://prismatic-lollipop-1a9351.netlify.app/" target="blank">Github-finder</a></h4>
+                                <p>In this you can find any username of github with all information of their repos, commits.</p>
+                                <p>Github: <a href="https://github.com/Ks103/githubfinder" target="_blank">Gitfinder</a></p>
+                            </div>
+                        </div>
+                        <div class="project-item padd_side_15">
+                            <div class="project-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-mobile-alt"></i>
+                                </div>
                                 <h4><a href="https://ks103.github.io/Flipit/" target="blank">Flipit</a></h4>
                                 <p>#Flip card memory game.This game is made from basic html,css and javascript,also is responsive. You can play this game in your mobile.Go through the game book before starting....Have fun!!!</p>
                                 <p>Github: <a href="https://github.com/Ks103/Flipit" target="_blank">FlipIt</a></p>
@@ -300,12 +330,12 @@
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd_side_15">
-                            <h2>Achievement</h2>
+                            <h2>Achievements</h2>
                         </div>
                     </div>
                     <div class="row">
                         <div class="achievement-heading padd_side_15">
-                            <h2>My recent Achievement :</h2>
+                            <h2>My recent Achievements :</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -337,6 +367,24 @@
                                 <h4><a href="./Document/Web Development Training - Certificate of Completion.pdf"
                                         target="blank">Training</a></h4>
                                 <p>Recently I have joined the web development training, it was a 2 month training in which I gained more knowledge in web domain.</p></div>
+                        </div>
+                        <div class="achievement-item padd_side_15">
+                            <div class="achievement-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-medal"></i>
+                                </div>
+                                <h4><a href="./Document/TXN22A174 (1).pdf"
+                                        target="blank">Txon Internship</a></h4>
+                                <p>Recently I was a  web development intern in TXON, it was a 1 month internship in which I have to perform several tasks.</p></div>
+                        </div>
+                        <div class="achievement-item padd_side_15">
+                            <div class="achievement-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-medal"></i>
+                                </div>
+                                <!-- <h4><a href="./Document/Web Development Training - Certificate of Completion.pdf" -->
+                                        target="blank">Hacktoberfest</a></h4>
+                                <p>Recently I contributed to open source in Hacktoberfest'22.</p></div>
                         </div>
                         <!-- Achievement Item -->
                        
