--- a/index.html
+++ b/index.html
@@ -315,9 +315,9 @@
                                 <div class="icon">
                                     <i class="fa fa-laptop-code"></i>
                                 </div>
-                                <h4><a href="https://ks103.github.io/MyPortfolio/">Portfolio Website</a></h4>
+                                <h4><a href="https://khushitech.netlify.app/">Portfolio Website</a></h4>
                                 <p>I have created this basic website where everyone can check out my recent achievements.</p>
-                                <p>Github: <a href="https://github.com/Ks103/MyPortfolio" target="_blank">Portfolio</a></p>
+                                <p>Github: <a href="https://github.com/Ks103/Portfolio" target="_blank">Portfolio</a></p>
                             </div>
                         </div>
                     </div>
