--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
                                 <div class="icon">
                                     <i class="fa fa-medal"></i>
                                 </div>
-                                <!-- <h4><a href="./Document/Web Development Training - Certificate of Completion.pdf" -->
+                                <h4><a href=#
                                         target="blank">Hacktoberfest</a></h4>
-                                <p>Recently I contributed to open source in Hacktoberfest'22.</p></div>
+                                <p>Recently I contributed to open source in Hacktoberfest'22. We need to merged 4 repos from difeerent repositries, it was a great start to open source. </p></div>
                         </div>
                         <!-- Achievement Item -->
                        
